opam-version: "2.0"
version: "dev"
maintainer: "palmskog@gmail.com"

homepage: "https://github.com/proofengineering/regmatch"
dev-repo: "git+https://github.com/proofengineering/regmatch.git"
bug-reports: "https://github.com/proofengineering/regmatch/issues"
license: "MIT"
synopsis: "Certified executable regular expression matcher in Coq"

build: [make "-j%{jobs}%"]
install: [make "install"]
depends: [
  "ocaml"
  "coq" {>= "8.9" & < "8.10~"}
  "coq-mathcomp-ssreflect" {>= "1.7" & < "1.10~"}
  "coq-reglang" {>= "1"}
]

tags: [
  "category:Computer Science/Formal Languages Theory and Automata"
  "keyword:regular expressions"
  "logpath:RegMatch"
]
authors: [
  "Karl Palmskog"
]
