opam-version: "2.0"
version: "dev"
maintainer: "palmskog@gmail.com"

homepage: "https://github.com/proofengineering/regmatch"
dev-repo: "git+https://github.com/proofengineering/regmatch.git"
bug-reports: "https://github.com/proofengineering/regmatch/issues"
license: "MIT"
synopsis: "Certified executable regular expression matcher in Coq"

build: [make "-j%{jobs}%"]
install: [make "install"]
depends: [
  "ocaml"
  "coq" {>= "8.9" & < "8.11~"}
  "ott" {build & >= "0.30"}
  "coq-ott" {>= "0.30"}
  "coq-mathcomp-ssreflect" {>= "1.9" & < "1.10~"}
  "coq-reglang" {>= "1.1"}
  "coq-equations" {>= "1.2"}  
]

tags: [
  "category:Computer Science/Formal Languages Theory and Automata"
  "keyword:regular expressions"
  "logpath:RegMatch"
]
authors: [
  "Karl Palmskog"
]
