opam-version: "2.0"
version: "dev"
maintainer: "palmskog@gmail.com"

homepage: "https://github.com/proofengineering/regmatch"
dev-repo: "git+https://github.com/proofengineering/regmatch.git"
bug-reports: "https://github.com/proofengineering/regmatch/issues"
license: "MIT"
synopsis: "Certified regular expression matcher"

build: [make "-j%{jobs}%" "matcher"]
depends: [
  "ocaml" {>= "4.02.3"}
  "coq" {>= "8.9" & < "8.10~"}
  "ott" {build & >= "0.29"}
  "coq-ott" {>= "0.29"}
  "coq-mathcomp-ssreflect" {>= "1.7" & < "1.10~"}
  "coq-reglang" {>= "1"}
  "coq-equations" {>= "1.2"}
  "menhir" {build & >= "20171013"}
  "ocamlbuild" {build}
  "ocamlfind" {build}
]

authors: [
  "Karl Palmskog"
]
