opam-version: "2.0"
version: "dev"
maintainer: "palmskog@gmail.com"

homepage: "https://github.com/proofengineering/regmatch"
dev-repo: "git+https://github.com/proofengineering/regmatch.git"
bug-reports: "https://github.com/proofengineering/regmatch/issues"
license: "MIT"
synopsis: "Certified regular expression matcher extracted from Coq"

build: [make "-j%{jobs}%" "matcher"]
depends: [
  "ocaml" {>= "4.02.3"}
  "coq" {>= "8.9" & < "8.11~"}
  "ott" {build & >= "0.30"}
  "coq-ott" {>= "0.30"}
  "coq-mathcomp-ssreflect" {>= "1.9" & < "1.10~"}
  "coq-reglang" {>= "1.1"}
  "coq-equations" {>= "1.2"}
  "menhir" {build & >= "20171013"}
  "ocamlbuild" {build}
  "ocamlfind" {build}
]

authors: [
  "Karl Palmskog"
]
