opam-version: "1.2"
version: "dev"
maintainer: "palmskog@gmail.com"
homepage: "https://github.com/proofengineering/regexp"
dev-repo: "https://github.com/proofengineering/regexp.git"
bug-reports: "https://github.com/proofengineering/regexp/issues"
license: "Proprietary"

build: [
  [ "./configure" ]
  [ make "-j%{jobs}%" ]
]
depends: [
  "coq" { ((>= "8.5" & < "8.6~") | (>= "8.6" & < "8.7~") | (>= "8.7" & < "8.8~")) }
  "ott" {build & >= "0.27"}
  "coq-ott" {>= "0.27"}
  "coq-mathcomp-ssreflect" {>= "1.6" & < "1.7~"}
  "reglang" {= "dev"}
]

tags: [
  "category:Computer Science/Formal Languages Theory and Automata"
  "keyword:regular expressions"
]
authors: [
  "Karl Palmskog <>" 
]
