opam-version: "1.2"
version: "dev"
maintainer: "palmskog@gmail.com"
homepage: "https://github.com/proofengineering/regexp"
dev-repo: "https://github.com/proofengineering/regexp.git"
bug-reports: "https://github.com/proofengineering/regexp/issues"
license: "Proprietary"

build: [
  [ "./configure" ]
  [ make "-j%{jobs}%" ]
]
depends: [
  "coq" {>= "8.7" & < "8.9~"}
  "ott" {build & >= "0.28"}
  "coq-ott" {>= "0.28"}
  "coq-mathcomp-ssreflect" {>= "1.6" & < "1.9~"}
  "coq-reglang" {= "dev"}
]

tags: [
  "category:Computer Science/Formal Languages Theory and Automata"
  "keyword:regular expressions"
]
authors: [
  "Karl Palmskog <>" 
]
